@@ -62,7 +62,7 @@ names are mapped to languages according to the following default mappings
 .RS 4
 .TP 9
 .B Assembler
-*.asm *.s *.S
+*.asm *.ASM *.s *.S
 .TP 9
 .B ASP
 *.asp *.asa
